:art: Ajuster l'application pour le démarrage depuis un runtime personnalisé